@@ -5,6 +5,7 @@ v. 0.17.5
 - include glass into some recipe
 - move gem to bob raw material
 - add bob extended electronics
+- add modular chest support
 
 v. 0.17.4
 - lamp now use glass
